cluster/apps/charts/llm-graph-builder/llm-graph-builder.yaml
--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llm-graph-builder
  name: llm-graph-builder-backend
#  namespace: llm-graph-builder
spec:
  selector:
    matchLabels:
      app: llm-graph-builder
  template:
    metadata:
      labels:
        app: llm-graph-builder
    spec:
      containers:
        - name: llm-graph-builder-backend
          image: harbor.rockyroad.rocks/llm-graph-builder/llm-graph-builder-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000 # backend defaults to 8000
              name: http-backend
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 4000Mi
            limits:
              cpu: "4000m"
              memory: "8000Mi"          
--- # deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llm-graph-builder
  name: llm-graph-builder-frontend
#  namespace: llm-graph-builder
spec:
  selector:
    matchLabels:
      app: llm-graph-builder
  template:
    metadata:
      labels:
        app: llm-graph-builder
        app.kubernetes.io/name: llm-graph-builder # required for Homepage
    spec:
      containers:
        - name: llm-graph-builder-frontend
          image: harbor.rockyroad.rocks/llm-graph-builder/llm-graph-builder-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # frontend defaults to 8080
              name: http-frontend
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
            limits:
              cpu: "500m"
              memory: "1000Mi"          
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: http-backend
      port: 8000
      protocol: TCP
      targetPort: http-backend
  selector:
    app: llm-graph-builder
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: http-frontend
      port: 8080
      protocol: TCP
      targetPort: http-frontend
  selector:
    app: llm-graph-builder
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc-np-back
spec:
  ports:
    - name: http-backend
      port: 8000
      protocol: TCP
      targetPort: http-backend
      nodePort: 30007
  selector:
    app: llm-graph-builder
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: http-svc-np-front
spec:
  ports:
    - name: http-frontend
      port: 8080
      protocol: TCP
      targetPort: http-frontend
      nodePort: 30008
  selector:
    app: llm-graph-builder
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: https://*.rockyroad.rocks
  name: llm-graph-builder-backend
spec:
  rules:
    - host: llm-graph-builder-backend.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: backend
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - llm-graph-builder-backend.rockyroad.rocks
      secretName: llm-graph-builder-backend-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-prod"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: "nginx"
    gethomepage.dev/description: Neo4j LLM Graph Builder
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Handy Tools
    gethomepage.dev/icon: neo4j
    gethomepage.dev/name: Neo4j LLM Graph Builder
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: https://*.rockyroad.rocks
  name: llm-graph-builder
spec:
  rules:
    - host: llm-graph-builder.rockyroad.rocks
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - llm-graph-builder.rockyroad.rocks
      secretName: llm-graph-builder-tls
